# tda4vm-r5f-rust

./: .gitignore  Cargo.toml  Makefile.common.toml  Makefile.toml  README.md
.cargo/: config
cortex-r5-pac/: Cargo.toml
cortex-r5-pac/src/: registers.rs
cortex-r5-pac/src/registers/: macros.rs  system_control.rs
cortex-r5-pac/src/registers/system_control/: drsr.rs  sctlr.rs
demo/: Makefile.toml  link.ld
demo-app/: Cargo.toml  build.rs  link.ld
demo-app-boot/: Cargo.toml  build.rs  link.ld
demo-app-boot/src/: lib.rs  main.rs  mpu.rs  panic.rs
demo-app/src/: lib.rs  main.rs  panic.rs  remoteproc.rs  trace_buffers.rs
demo/.cargo/: config
demo/demo-app/: Cargo.toml  build.rs  link_main.ld
demo/demo-app-boot/: Cargo.toml  link.ld  link_boot.ld
demo/demo-app-boot/src/: bin.rs  mpu.rs
demo/demo-app/src/: bin.rs  panic.rs
libs/cortex-r5-pac/src/registers/: macros.rs
libs/cortex-r5-pac/src/registers/system_control/: dracr.rs  drbar.rs  rgnr.rs  sctlr.rs
libs/remoteproc-resource-table/: Cargo.toml
libs/remoteproc-resource-table/src/: entries.rs  lib.rs  packing.rs  test_utils.rs
libs/remoteproc-resource-table/src/entries/: carveout.rs  trace.rs  vdev.rs
libs/remoteproc-resource-table/src/entries/vdev/: virtio_types.rs
libs/remoteproc-resource-table/src/packing/: address.rs  strings.rs  zero_bytes.rs
libs/remoteproc-resource-table/tests/: entry_data_carveout.rs  entry_data_trace.rs  macro_data.rs  macro_syntax.rs  resource_table_data.rs
libs/remoteproc-resource-table/tests/utils/: mod.rs
remoteproc-resource-table/: Cargo.toml
remoteproc-resource-table/src/: lib.rs
remoteproc-resource-table/tests/: macro_syntax.rs  resource_table_data.rs
tools/rename-private-symbols/: Cargo.toml
tools/rename-private-symbols/src/: main.rs
