[package]
name = "demo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
remoteproc-resource-table = { path = "../remoteproc-resource-table" }

[[bin]]
name = "demo-app"
test = false
bench = false
