[package]
name = "demo-app-boot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
remoteproc-resource-table = { path = "../../libs/remoteproc-resource-table" }
cortex-r5-pac = { path = "../../libs/cortex-r5-pac" }

[[bin]]
name = "demo-app-boot"
path = "src/bin.rs"
test = false
